Add simple simulation to index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,14 @@
                     <small>Autocomplete for Textarea</small>
                 </h1>
             </div>
-            <textarea rows="5" cols="80"></textarea>
+            <div>
+                <textarea rows="7" cols="80"></textarea>
+            </div>
+
+            <h2>License</h2>
+            <p>
+                MIT with starring the <a href="https://github.com/yuku-t/jquery-textcomplete">repository</a> at GitHub. OR GPL without starring.
+            </p>
         </div>
     </body>
 </html>
