Add fork me button

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="media/stylesheets/bootstrap.css" rel="stylesheet"/>
+        <link href="media/stylesheets/font-awesome.css" rel="stylesheet"/>
         <link href="media/stylesheets/main.css" rel="stylesheet"/>
 
         <script src="media/javascripts/jquery-2.0.3.min.js"></script>
@@ -17,6 +18,13 @@
                     <small>Autocomplete for Textarea</small>
                 </h1>
             </div>
+
+            <a href="https://github.com/yuku-t/jquery-textcomplete" class="btn btn-default btn-lg">
+                <i class="icon-github"></i>
+                Fork me on GitHub.
+            </a>
+
+            <h2>Demo</h2>
             <div>
                 <textarea rows="7" cols="80"></textarea>
             </div>
