--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </h1>
             </div>
 
-            <a href="https://github.com/yuku-t/jquery-textcomplete" class="btn btn-default btn-lg">
+            <a href="https://github.com/yuku-t/jquery-textcomplete" class="btn btn-default btn-large">
                 <i class="icon-github"></i>
                 Fork me on GitHub.
             </a>
