Fix textarea size

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <h2>Demo</h2>
             <div>
-                <textarea rows="7" cols="80"></textarea>
+                <textarea class="input-xxlarge" rows="4"></textarea>
             </div>
 
             <h2>License</h2>
