--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <h2>License</h2>
             <p>
-                MIT with starring the <a href="https://github.com/yuku-t/jquery-textcomplete">repository</a> at GitHub. OR GPL without starring.
+                MIT
             </p>
         </div>
     </body>
