--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <link href="media/stylesheets/font-awesome.css" rel="stylesheet"/>
         <link href="media/stylesheets/main.css" rel="stylesheet"/>
 
-        <script src="media/javascripts/jquery-2.0.3.min.js"></script>
+        <!--[if lte IE 8]><script src="media/javascripts/jquery-1.10.2.js"></script><![endif]-->
+        <!--[if gte IE 9|!IE]>--><script src="media/javascripts/jquery-2.0.3.min.js"></script><!--<![endif]-->
         <script src="jquery.textcomplete.js"></script>
         <script src="media/javascripts/emoji.js"></script>
         <script src="media/javascripts/main.js"></script>
