--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link href="media/stylesheets/main.css" rel="stylesheet"/>
 
         <script src="media/javascripts/jquery-1.10.2.js"></script>
+        <!-- <script src="media/javascripts/zepto-1.0.js"></script> -->
         <script src="jquery.textcomplete.js"></script>
         <script src="media/javascripts/emoji.js"></script>
         <script src="media/javascripts/main.js"></script>
