--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <script src="media/javascripts/jquery-1.10.2.js"></script>
         <!-- <script src="media/javascripts/zepto-1.0.js"></script> -->
+        <script src="http://yuku-t.com/jquery-overlay/jquery.overlay.js"></script>
         <script src="jquery.textcomplete.js"></script>
         <script src="media/javascripts/emoji.js"></script>
         <script src="media/javascripts/shCore.js"></script>
@@ -31,18 +32,14 @@
             </a>
 
             <h2>Demo</h2>
-            <div>
-                <h3>Emoji</h3>
-                <div>
-                    <div>#textarea1</div>
-                    <div>
-                        <textarea id="textarea1" rows="4" style="display: block; width: 100%;"></textarea>
-                    </div>
+
+            <h3>Basic Usage</h3>
+            <div><textarea id="textarea1" rows="4" style="display: block; width: 100%;">:a</textarea></div>
 <pre class="brush: js; script">
 $('#textarea1').textcomplete({
     // emoji strategy
     emoji: {
-        match: /(^|\s):([\-+\w]*)$/,
+        match: /\B:([\-+\w]*)$/,
         search: function (term, callback) {
             callback($.map(emojies, function (emoji) {
                 return emoji.indexOf(term) === 0 ? emoji : null;
@@ -52,26 +49,22 @@ $('#textarea1').textcomplete({
             return '&lt;img src="media/images/emoji/' + value + '.png"&gt;&lt;/img&gt;' + value;
         },
         replace: function (value) {
-            return '$1:' + value + ': ';
+            return ':' + value + ': ';
         },
+        index: 1,
         maxCount: 5
     }
 });
 </pre>
-                </div>
-                <h3>HTML Elements</h3>
-                <div>
-                    <div>#textarea2</div>
-                    <div>
-                        <textarea id="textarea2" rows="4" style="display: block; width: 100%;"></textarea>
-                    </div>
+
+            <h3>Insert Cursor After Autocomplete</h3>
+            <div><textarea id="textarea2" rows="4" style="display: block; width: 100%;">Please input HTML element: </textarea></div>
 <pre class="brush: js; script">
 var elements = ['span', 'div', 'h1', 'h2', 'h3'];
 $('#textarea2').textcomplete({
     html: {
         match: /<(\w*)$/,
         search: function (term, callback) {
-            console.log(term);
             callback($.map(elements, function (element) {
                 return element.indexOf(term) === 0 ? element : null;
             }));
@@ -83,8 +76,34 @@ $('#textarea2').textcomplete({
     }
 });
 </pre>
-                </div>
-            </div>
+
+            <h3>Use with <a href="http://yuku-t.com/jquery-overlay/" target="_blank">jQuery.overlay</a></h3>
+            <div><textarea id="textarea3" rows="4" style="display: block; width: 100%;">Hey @guys,
+All words start with @ are emphasized like @this.</textarea></div>
+<pre class="brush: js; script">
+var mentions = ['yuku_t'];
+$('#textarea3').overlay([
+    {
+        match: /\B@\w+/g,
+        css: {
+            'background-color': '#d8dfea'
+        }
+    }
+]).textcomplete({
+    html: {
+        match: /\B@(\w*)$/,
+        search: function (term, callback) {
+            callback($.map(mentions, function (mention) {
+                return mention.indexOf(term) === 0 ? mention : null;
+            }));
+        },
+        index: 1,
+        replace: function (mention) {
+            return '@' + mention + ' ';
+        }
+    }
+});
+</pre>
 
             <h2>License</h2>
             <p>
