--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             <h3>Basic Usage</h3>
             <div><textarea id="textarea1" rows="4" style="display: block; width: 100%;">:a</textarea></div>
 <pre class="brush: js; script">
+var words = ['apple', 'google', 'facebook', 'github'];
 $('#textarea1').textcomplete({
     // emoji strategy
     emoji: {
@@ -53,6 +54,18 @@ $('#textarea1').textcomplete({
         },
         index: 1,
         maxCount: 5
+    },
+
+    techCompanies: {
+        match: /(\s|\n)(\w{2,})$/,
+        search: function (term, callback) {
+            callback($.map(words, function (word) {
+                return word.indexOf(term) === 0 ? word : null;
+            }));
+        },
+        replace: function (word) {
+            return '$1' + word + ' ';
+        }
     }
 });
 </pre>
