--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@ $('#textarea1').textcomplete([
         maxCount: 5
     },
     { // tech companies
-        match: /(\s|\n)(\w{2,})$/,
+        match: /\b(\w{2,})$/,
         search: function (term, callback) {
             callback($.map(words, function (word) {
                 return word.indexOf(term) === 0 ? word : null;
             }));
         },
+        index: 1,
         replace: function (word) {
-            return '$1' + word + ' ';
+            return word + ' ';
         }
     }
 ]);
