--- a/index.html
+++ b/index.html
@@ -176,7 +176,28 @@ $('#textarea5').textcomplete([
     }
 ]);
 </pre>
-
+            <h3>Apply to Contenteditables</h3>
+            <div class="textarea-wrapper">
+                <span class="label">.contenteditable1</span>
+                <div class="contenteditable1" contenteditable="true" style="display: block; width: 100%; height: 100px; border: 1px solid gray; padding-top: 20px;"><b>Look</b> at this <em>glorious</em> contenteditable.</div>
+            </div>
+<pre class="brush: js; script">
+$('.contenteditable1').textcomplete([
+    { // tech companies
+        words: ['stunning', 'amazing', 'incredible', 'fantastic', 'fantabulous'],
+        match: /\b(\w{2,})$/,
+        search: function (term, callback) {
+            callback($.map(this.words, function (word) {
+                return word.indexOf(term) === 0 ? word : null;
+            }));
+        },
+        index: 1,
+        replace: function (word) {
+            return word + '&nbsp;';
+        }
+    }
+]);
+</pre>
             <h2>License</h2>
             <p>
                 MIT
