[Fix #30 #64] Add appendTo option

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ $('#textarea3').textcomplete([
             return '@' + mention + ' ';
         }
     }
-]).overlay([
+], { appendTo: 'body' }).overlay([
     {
         match: /\B@\w+/g,
         css: {
